add more dir